Cacti CHANGELOG

1.3.0-dev
-issue#3066: Enable the secure flag on cookies when HTTPS is enabled.
-issue#3074: ss_net_snmp_disk_bytes.php and ss_net_snmp_disk_io.php do now report mmcblk data.
-issue#3141: Fix FreeBSD IPv6 ping
-feature#1523: Value above RRD maximum value
-feature#2474: Enable better version reporting for GitHub/Source/Package editions
-feature#2550: Enable use of authenticator codes for Two-Factor Authentication
-feature#2607: Allow adding sites from command line
-feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
-feature#3187: Feature: rra path should be configurable
-feature#3513: Add hooks for plugins to show customize graph source and customize template url

1.2.23
-security#4920: Add .htaccess file to scripts folder
-issue#4418: When using Single Signon Frameworks like SiteMinder Cacti does not properly detect ticket revocation in callbacks
-issue#4682: New templates are not installed during the update
-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error
-issue#4917: Under certain circumstances Real Time counter gets stuck and does not count down
-issue#4921: Aggregate Graph Permissions not working as expected
-issue#4923: Graph template "duplicate" action does not working - 500 Internal Server Error